Yunus_Emre_Taskesen_Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web-container
        image: nginx:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: depo-alani
          mountPath: /usr/share/nginx/html
      volumes:
      - name: depo-alani
        persistentVolumeClaim:
          claimName: web-pvc
